[gd_scene load_steps=4 format=3 uid="uid://c0hwnrs6ki8nk"]

[ext_resource type="FontFile" uid="uid://c8fvau54sblb1" path="res://ui/01_atoms/assets/fonts/By Wuchta/Letterstyle(1).otf" id="1_4ao5m"]
[ext_resource type="Script" uid="uid://c7vem5rb2jgg5" path="res://ui/03_organisms/controls_settings_submenu/controls_settings_submenu.gd" id="1_eq131"]
[ext_resource type="Theme" uid="uid://cgihxoevv7qgc" path="res://ui/01_atoms/theme.tres" id="2_eq131"]

[node name="Controls" type="VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 30
script = ExtResource("1_eq131")

[node name="ControlsLabel" type="Label" parent="."]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4ao5m")
theme_override_font_sizes/font_size = 15
text = "Controls"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="ConfigureLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "You can use your mouse for this."

[node name="InputControls" type="GridContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource("2_eq131")
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 4

[node name="RunBehaviorContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0

[node name="Control" type="Control" parent="RunBehaviorContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="Label" type="Label" parent="RunBehaviorContainer"]
layout_mode = 2
text = "Run button behavior:"

[node name="Hold" type="CheckBox" parent="RunBehaviorContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath("../Toggle")
focus_neighbor_bottom = NodePath("../../ResetToDefaults/Reset")
mouse_filter = 2
text = "Hold"

[node name="Toggle" type="CheckBox" parent="RunBehaviorContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Hold")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../ResetToDefaults/Reset")
mouse_filter = 2
text = "Toggle"

[node name="ResetToDefaults" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0

[node name="Control" type="Control" parent="ResetToDefaults"]
custom_minimum_size = Vector2(18, 0)
layout_mode = 2

[node name="Reset" type="Button" parent="ResetToDefaults"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
text = "Reset controls to defaults"

[connection signal="toggled" from="RunBehaviorContainer/Hold" to="." method="on_run_hold_toggled"]
[connection signal="pressed" from="ResetToDefaults/Reset" to="." method="_on_reset_pressed"]
